# rust-tmpl

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bacon.toml  lefthook.yml
.github/workflows/: docker-build.yml  test.yml
migrations/: 001_init.sql
src/: auth.rs  config.rs  database.rs  helpers.rs  main.rs  observability.rs  routes.rs
src/background/: mod.rs
src/features/users/: mod.rs  users_handlers.rs
src/middlewares/: auth.rs  basic_log.rs  mod.rs  observability.rs
